--- a/drivers-stubs/riak/pom.xml
+++ b/drivers-stubs/riak/pom.xml
@@ -148,8 +148,11 @@
 	</build>
 	
 	<properties>
-		<_pom_package>mosaic-components-java-driver-riak</_pom_package>
+		<_pom_group>eu.mosaic_cloud.drivers</_pom_group>
+		<_pom_artifact>drivers-stubs-riak</_pom_artifact>
+		<_pom_version>0.7.0_mosaic_dev-SNAPSHOT</_pom_version>
 		<_pom_classifier>component</_pom_classifier>
+		<_pom_package>mosaic-components-java-driver-riak</_pom_package>
 	</properties>
 	
 </project>
