--- a/cloudlets/pom.xml
+++ b/cloudlets/pom.xml
@@ -125,8 +125,11 @@
 	</build>
 	
 	<properties>
-		<_pom_package>mosaic-components-java-cloudlet-container</_pom_package>
+		<_pom_group>eu.mosaic_cloud.platform</_pom_group>
+		<_pom_artifact>cloudlets</_pom_artifact>
+		<_pom_version>0.7.0_mosaic_dev-SNAPSHOT</_pom_version>
 		<_pom_classifier>component</_pom_classifier>
+		<_pom_package>mosaic-components-java-cloudlet-container</_pom_package>
 	</properties>
 	
 </project>
