--- a/drivers-stubs/amqp/pom.xml
+++ b/drivers-stubs/amqp/pom.xml
@@ -142,8 +142,11 @@
 	</build>
 	
 	<properties>
-		<_pom_package>mosaic-components-java-driver-amqp</_pom_package>
+		<_pom_group>eu.mosaic_cloud.drivers</_pom_group>
+		<_pom_artifact>drivers-stubs-amqp</_pom_artifact>
+		<_pom_version>0.7.0_mosaic_dev-SNAPSHOT</_pom_version>
 		<_pom_classifier>component</_pom_classifier>
+		<_pom_package>mosaic-components-java-driver-amqp</_pom_package>
 	</properties>
 	
 </project>
