Update default version

--- a/artifacts/pom.xml
+++ b/artifacts/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>eu.mosaic_cloud</groupId>
 		<artifactId>parent</artifactId>
-		<version>0.7.0_mosaic_dev-SNAPSHOT</version>
+		<version>0.7.0_dev-SNAPSHOT</version>
 		<relativePath>../parent</relativePath>
 	</parent>
 	
@@ -30,7 +30,7 @@
 	<properties>
 		<_pom_group>eu.mosaic_cloud</_pom_group>
 		<_pom_artifact>artifacts</_pom_artifact>
-		<_pom_version>0.7.0_mosaic_dev-SNAPSHOT</_pom_version>
+		<_pom_version>0.7.0_dev-SNAPSHOT</_pom_version>
 		<_pom_classifier>artifacts</_pom_classifier>
 		<_pom_package>mosaic-java-platform-artifacts</_pom_package>
 	</properties>
