--- a/drivers-stubs/riak/pom.xml
+++ b/drivers-stubs/riak/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>eu.mosaic_cloud.drivers</groupId>
 		<artifactId>drivers-parent</artifactId>
-		<version>0.7.0_mosaic_dev-SNAPSHOT</version>
+		<version>0.7.0_dev-SNAPSHOT</version>
 		<relativePath>../../drivers-parent</relativePath>
 	</parent>
 	
@@ -150,7 +150,7 @@
 	<properties>
 		<_pom_group>eu.mosaic_cloud.drivers</_pom_group>
 		<_pom_artifact>drivers-stubs-riak</_pom_artifact>
-		<_pom_version>0.7.0_mosaic_dev-SNAPSHOT</_pom_version>
+		<_pom_version>0.7.0_dev-SNAPSHOT</_pom_version>
 		<_pom_classifier>component</_pom_classifier>
 		<_pom_package>mosaic-components-java-driver-riak</_pom_package>
 	</properties>
