--- a/cloudlets/pom.xml
+++ b/cloudlets/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>eu.mosaic_cloud.platform</groupId>
 		<artifactId>platform-parent</artifactId>
-		<version>0.7.0_mosaic_dev-SNAPSHOT</version>
+		<version>0.7.0_dev-SNAPSHOT</version>
 		<relativePath>../platform-parent</relativePath>
 	</parent>
 	
@@ -127,7 +127,7 @@
 	<properties>
 		<_pom_group>eu.mosaic_cloud.platform</_pom_group>
 		<_pom_artifact>cloudlets</_pom_artifact>
-		<_pom_version>0.7.0_mosaic_dev-SNAPSHOT</_pom_version>
+		<_pom_version>0.7.0_dev-SNAPSHOT</_pom_version>
 		<_pom_classifier>component</_pom_classifier>
 		<_pom_package>mosaic-components-java-cloudlet-container</_pom_package>
 	</properties>
